# Neuralnet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  digits_model.npz  main.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  tests.yml
Neuralnet/: __init__.py  activations.py  callbacks.py  exceptions.py  initializers.py  layers.py  losses.py  metrics.py  model.py  optimizers.py  regularizers.py  serialization.py
Neuralnet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
benchmarks/: benchmark_conv2d.py  benchmark_dense.py
docs/: benchmarks.md  callbacks.md  examples.md  getting_started.md  index.md  installation.md  layers.md  quickstart.md  sequential.md  serialization.md  training.md  tutorials.md
docs/api/: callbacks.md  layers.md  losses.md  metrics.md  models.md  optimizers.md  serialization.md
examples/: batchnorm_iris.py  conv2d_demo.py  flatten_demo.py  history_dataframe_demo.py  history_plot_demo.py  iris_classification.py  iris_dropout.py  iris_l2.py  mnist_classifier.py  model_inspection_demo.py  xor.py
kronyx/: __init__.py  activations.py  exceptions.py  initializers.py  layers.py  losses.py  metrics.py  model.py  serialization.py  utils.py  version.py
tests/: __init__.py  gradient_check.py  test_batchnorm.py  test_conv2d.py  test_dense.py  test_dropout.py  test_losses.py  test_optimizers.py  test_regularizers.py
