[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kronyx"
version = "0.6.0"
description = "A lightweight deep learning framework built from scratch using NumPy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

authors = [
    { name = "Kronyx Contributors" }
]

maintainers = [
    { name = "Kronyx Contributors" }
]

keywords = [
    "deep-learning",
    "neural-network",
    "numpy",
    "machine-learning",
    "framework",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11.2",
]

[project.urls]
Homepage = "https://github.com/Kronyx/kronyx"
Documentation = "https://github.com/Kronyx/kronyx#readme"
Repository = "https://github.com/Kronyx/kronyx"
Issues = "https://github.com/Kronyx/kronyx/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kronyx*"]

[tool.coverage.run]
source = ["kronyx"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
    "def __repr__",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]

ignore = [
    "N999",
]